# flutter_onnxruntime

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/onnxruntime_example/: MainActivity.kt
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  model.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: tokenize.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  tokenize.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_onnxruntime_example.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_onnxruntime_example.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
